SyntacticAnalyzer/tests/fail/for02.java
class foo {
	ctor (int n1)
	var int n2, n3;
	var boolean b1;
	{ // bloque - lista de sentencias

		b1 = true;

		for (n1 = true||false; n1!=20%2>=6*3; n1/n2)
			;  // ; es sentencia - aca termina el for
		
		{	n2 = n2 + 1;	// bloque es sentencia
		
			// los separadores son ,
		  	for(n1 = null, n1<=54/2, n1||true) {
		 	if (b1) {
				n3 = n1 % 2;
			} else { 
				n3 = n1*50/2 - 44 + 'a' == true;			
		  	}
		}
	}
}

